src/main/kotlin/com/example/cantinabackend/web/errors/NoPermissionException.kt
package io.planer.shifts.web.errors

class NoPermissionException(message: String) : RuntimeException(message)